# libsimba.py-platform

./: .gitignore  LICENCE  Makefile  README.md  foo.py  pyproject.toml  requirements.txt
docs/: .buildinfo  genindex.html  index.html  intro.html  libsimba.auth.html  libsimba.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_autosummary/: libsimba.html  libsimba.simba.Simba.html  libsimba.simba_contract.SimbaContract.html
docs/_sources/: intro.md.txt  intro.rst.txt  libsimba.rst.txt  modules.rst.txt
docs/_static/: documentation_options.js
docs/html/: .buildinfo  genindex.html  index.html  intro.html  libsimba.auth.html  libsimba.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
libsimba/: .env  54b9e963-5540-4b81-8362-99b76ea8d5c1_token.json  __init__.py  auth.py  class_converter.py  decorators.py  exceptions.py  file_handler.py  keyword_converter.py  param_checking_contract.py  python_keyword_conversion.py  settings.py  simba.py  simba_async.py  simba_async_will_be_simba.py  simba_contract.py  simba_contract_async.py  simba_contract_async_will_be_simba_contract.py  simba_contract_sync.py  simba_hinted_contract.py  simba_request.py  simba_sync.py  simba_wallet.py  utils.py
notebooks/: create_hinted_contract.ipynb  examples.ipynb  generated_simba_hinted_contract.ipynb  param_checker_iunit_tests.ipynb
source/: conf.py  index.rst
tests/: app_md_2_contract.py  app_md_3_contract.py  app_md_contract.py  create_car_module.py  create_hinted_contract.py  create_test_simba_hinted.py  examples.py  foo.py  simple.py  test_decorators.py  test_file.txt  test_hinted_contract.py  test_simba.py  test_simba_hinted.py  test_simba_output.py  test_simba_wallet.py  use_test_simba_hinted.py
(+55 files in other folders)
