[tool.poetry]
name = "libsimba.py-platform"
version = "0.1.7.1-alpha"
description = ""
authors = [
    "Adam Brinckman <abrinckm@gmail.com>",
    "Ian Harvey <ian.harvey@simbachain.com>"
]

packages = [
    { include = "libsimba" }
]

[tool.poetry.dependencies]
python = ">3.7.0,<3.7.1 || >3.7.1,<4.0"
requests = "^2.25.1"
httpx = "^0.21.1"
hdwallet = "^2.1.1"
web3 = "^5.28.0"

[tool.poetry.dev-dependencies]
Sphinx = "^3.5.4"
sphinx-rtd-theme = "^0.5.2"
twine = "^3.4.1"
myst-parser = "^0.15.2"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = 'libsimba.simba:Simba.test'
